--- a/README
+++ b/README
@@ -2,3 +2,8 @@ Author
 salma ntidendereza
 Description
 This is a website for a studio called Delani which is a fictional studio. The reason for building the website is to honor my Bootstrap and Jquery skills.
+Installation/Setup
+Open your terminal (CTRL ALT T)
+cd into a folder and initalise git
+Clone the project from github git clone https://github.com/Moglie02/Delani-Studio.git
+Open the folder in your text editor prefferably VS-code (code .)
