Everything related to delani studio website

--- a/README
+++ b/README
@@ -7,3 +7,14 @@ Open your terminal (CTRL ALT T)
 cd into a folder and initalise git
 Clone the project from github git clone https://github.com/Moglie02/Delani-Studio.git
 Open the folder in your text editor prefferably VS-code (code .)
+<strong>Technologies<strong>
+HTML5
+CSS3
+Javascript and Jquery
+Bootstrap 4
+Mail chimp API
+Contact
+Twitter: [salmaladha]
+License
+MIT License MIT license
+Copyright © 2022 SALMA NTIDENDEREZA
